# multimodal_rag_test

./: .gitignore  INSTALL_GUIDE.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/models/: __init__.py  embedding.py  knowledge.py
app/tests/: test_knowledge.py
app/utils/: constants.py  id_generator.py  pdf.py  query.py
app/views/: __init__.py  knowledge_view.py  search_ui.py
scripts/: batch_generate_embeddings.py  prd.txt  task-complexity-report.json
tests/: batch_generate_embeddings.py  test_single_pdf_embedding.py
